test: add tests for Service