@@ -1,7 +1,7 @@
 package id.ac.ui.cs.advprog.papikos.chat.service;
 
 import id.ac.ui.cs.advprog.papikos.chat.model.Chatroom;
-import id.ac.ui.cs.advprog.papikos.chat.repository.ChatroomRepositoryImpl;
+import id.ac.ui.cs.advprog.papikos.chat.repository.ChatroomRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -18,7 +18,7 @@ import static org.mockito.Mockito.*;
 class ChatroomServiceTest {
 
     @Mock
-    private ChatroomRepositoryImpl chatroomRepository;
+    private ChatroomRepository chatroomRepository;
 
     @InjectMocks
     private ChatroomServiceImpl chatroomService;
@@ -48,66 +48,113 @@ class ChatroomServiceTest {
 
     @Test
     void createChatroom_WhenNewChatroom_ShouldCreateAndReturnChatroom() {
-        when(chatroomRepository
-                .findByRenterIdAndOwnerIdAndPropertyId(renterId, ownerId, propertyId))
+        when(chatroomRepository.findByRenterIdAndOwnerIdAndPropertyId(renterId, ownerId, propertyId))
                 .thenReturn(Optional.empty());
-        when(chatroomRepository.save(any(Chatroom.class)))
-                .thenReturn(mockChatroom);
+
+        when(chatroomRepository.save(any(Chatroom.class))).thenReturn(mockChatroom);
 
         Chatroom result = chatroomService.createChatroom(renterId, ownerId, propertyId);
 
         assertNotNull(result);
         assertEquals(chatroomId, result.getId());
-        verify(chatroomRepository)
-                .findByRenterIdAndOwnerIdAndPropertyId(renterId, ownerId, propertyId);
+        assertEquals(renterId, result.getRenterId());
+        assertEquals(ownerId, result.getOwnerId());
+        assertEquals(propertyId, result.getPropertyId());
+
         verify(chatroomRepository).save(any(Chatroom.class));
     }
 
+
     @Test
     void createChatroom_WhenChatroomExists_ShouldReturnExistingChatroom() {
-        when(chatroomRepository
-                .findByRenterIdAndOwnerIdAndPropertyId(renterId, ownerId, propertyId))
+        when(chatroomRepository.findByRenterIdAndOwnerIdAndPropertyId(renterId, ownerId, propertyId))
                 .thenReturn(Optional.of(mockChatroom));
 
         Chatroom result = chatroomService.createChatroom(renterId, ownerId, propertyId);
 
         assertNotNull(result);
         assertEquals(chatroomId, result.getId());
-        verify(chatroomRepository)
-                .findByRenterIdAndOwnerIdAndPropertyId(renterId, ownerId, propertyId);
+        assertEquals(renterId, result.getRenterId());
+        assertEquals(ownerId, result.getOwnerId());
+        assertEquals(propertyId, result.getPropertyId());
+
+        verify(chatroomRepository).findByRenterIdAndOwnerIdAndPropertyId(renterId, ownerId, propertyId);
+        verify(chatroomRepository, never()).save(any());
+    }
+
+
+    @Test
+    void createChatroom_WhenExistingChatroomFoundInIteration_ShouldReturnExisting() {
+        Chatroom existingChatroom = new Chatroom();
+        existingChatroom.setId(UUID.randomUUID());
+        existingChatroom.setRenterId(renterId);
+        existingChatroom.setOwnerId(ownerId);
+        existingChatroom.setPropertyId(propertyId);
+
+        when(chatroomRepository.findAll()).thenReturn(Collections.singletonList(existingChatroom));
+
+        Chatroom result = chatroomService.createChatroom(renterId, ownerId, propertyId);
+
+        assertNotNull(result);
+        assertEquals(existingChatroom.getId(), result.getId());
+        assertEquals(renterId, result.getRenterId());
+        assertEquals(ownerId, result.getOwnerId());
+        assertEquals(propertyId, result.getPropertyId());
+
+        verify(chatroomRepository).findAll();
+        verify(chatroomRepository, never()).findByRenterIdAndOwnerIdAndPropertyId(any(), any(), any());
         verify(chatroomRepository, never()).save(any());
     }
 
     @Test
     void getChatroomsByRenterId_ShouldReturnList() {
-        List<Chatroom> list = List.of(mockChatroom);
-        when(chatroomRepository.findByRenterId(renterId)).thenReturn(list);
+        List<Chatroom> expectedChatrooms = Arrays.asList(mockChatroom);
+        when(chatroomRepository.findByRenterIdForList(renterId)).thenReturn(expectedChatrooms);
 
         List<Chatroom> result = chatroomService.getChatroomsByRenterId(renterId);
 
         assertEquals(1, result.size());
         assertSame(mockChatroom, result.get(0));
-        verify(chatroomRepository).findByRenterId(renterId);
-        verify(chatroomRepository, never()).findByOwnerId(any());
+        verify(chatroomRepository).findByRenterIdForList(renterId);
+        verify(chatroomRepository, never()).findByOwnerIdForList(any());
+    }
+
+    @Test
+    void getChatroomsByRenterId_ShouldReturnEmptyList() {
+        when(chatroomRepository.findByRenterIdForList(renterId)).thenReturn(Collections.emptyList());
+
+        List<Chatroom> result = chatroomService.getChatroomsByRenterId(renterId);
+
+        assertEquals(0, result.size());
+        verify(chatroomRepository).findByRenterIdForList(renterId);
     }
 
     @Test
     void getChatroomsByOwnerId_ShouldReturnList() {
-        List<Chatroom> list = List.of(mockChatroom);
-        when(chatroomRepository.findByOwnerId(ownerId)).thenReturn(list);
+        List<Chatroom> expectedChatrooms = Arrays.asList(mockChatroom);
+        when(chatroomRepository.findByOwnerIdForList(ownerId)).thenReturn(expectedChatrooms);
 
         List<Chatroom> result = chatroomService.getChatroomsByOwnerId(ownerId);
 
         assertEquals(1, result.size());
         assertSame(mockChatroom, result.get(0));
-        verify(chatroomRepository).findByOwnerId(ownerId);
-        verify(chatroomRepository, never()).findByRenterId(any());
+        verify(chatroomRepository).findByOwnerIdForList(ownerId);
+        verify(chatroomRepository, never()).findByRenterIdForList(any());
+    }
+
+    @Test
+    void getChatroomsByOwnerId_ShouldReturnEmptyList() {
+        when(chatroomRepository.findByOwnerIdForList(ownerId)).thenReturn(Collections.emptyList());
+
+        List<Chatroom> result = chatroomService.getChatroomsByOwnerId(ownerId);
+
+        assertEquals(0, result.size());
+        verify(chatroomRepository).findByOwnerIdForList(ownerId);
     }
 
     @Test
     void getChatroomById_WhenExists_ShouldReturnChatroom() {
-        when(chatroomRepository.findById(chatroomId))
-                .thenReturn(Optional.of(mockChatroom));
+        when(chatroomRepository.findById(chatroomId)).thenReturn(Optional.of(mockChatroom));
 
         Chatroom result = chatroomService.getChatroomById(chatroomId);
 
@@ -116,15 +163,89 @@ class ChatroomServiceTest {
     }
 
     @Test
-    void getChatroomById_WhenNotExists_ShouldThrow() {
-        when(chatroomRepository.findById(chatroomId))
-                .thenReturn(Optional.empty());
+    void getChatroomById_WhenNotExists_ShouldThrowRuntimeException() {
+        when(chatroomRepository.findById(chatroomId)).thenReturn(Optional.empty());
 
-        RuntimeException ex = assertThrows(
+        RuntimeException exception = assertThrows(
                 RuntimeException.class,
                 () -> chatroomService.getChatroomById(chatroomId)
         );
-        assertEquals("Chatroom not found with id: " + chatroomId, ex.getMessage());
+
+        assertEquals("Chatroom not found with id: " + chatroomId, exception.getMessage());
         verify(chatroomRepository).findById(chatroomId);
+    }
+
+    @Test
+    void createChatroom_ShouldSetCreatedAtWhenSaving() {
+        when(chatroomRepository.findAll()).thenReturn(Collections.emptyList());
+        when(chatroomRepository.findByRenterIdAndOwnerIdAndPropertyId(renterId, ownerId, propertyId))
+                .thenReturn(Optional.empty());
+        when(chatroomRepository.save(any(Chatroom.class))).thenAnswer(invocation -> {
+            Chatroom chatroom = invocation.getArgument(0);
+            assertNotNull(chatroom.getCreatedAt());
+            chatroom.setId(chatroomId);
+            return chatroom;
+        });
+
+        Chatroom result = chatroomService.createChatroom(renterId, ownerId, propertyId);
+
+        assertNotNull(result);
+        assertNotNull(result.getCreatedAt());
+        assertEquals(renterId, result.getRenterId());
+        assertEquals(ownerId, result.getOwnerId());
+        assertEquals(propertyId, result.getPropertyId());
+    }
+
+    @Test
+    void createChatroom_WithNullParameters_ShouldHandleGracefully() {
+        when(chatroomRepository.findAll()).thenReturn(Collections.emptyList());
+        when(chatroomRepository.findByRenterIdAndOwnerIdAndPropertyId(null, null, null))
+                .thenReturn(Optional.empty());
+        when(chatroomRepository.save(any(Chatroom.class))).thenReturn(mockChatroom);
+
+        Chatroom result = chatroomService.createChatroom(null, null, null);
+
+        assertNotNull(result);
+        verify(chatroomRepository).save(any(Chatroom.class));
+    }
+
+    @Test
+    void getChatroomsByRenterId_WithMultipleChatrooms_ShouldReturnAll() {
+        Chatroom chatroom1 = new Chatroom();
+        chatroom1.setId(UUID.randomUUID());
+        chatroom1.setRenterId(renterId);
+
+        Chatroom chatroom2 = new Chatroom();
+        chatroom2.setId(UUID.randomUUID());
+        chatroom2.setRenterId(renterId);
+
+        List<Chatroom> expectedChatrooms = Arrays.asList(chatroom1, chatroom2);
+        when(chatroomRepository.findByRenterIdForList(renterId)).thenReturn(expectedChatrooms);
+
+        List<Chatroom> result = chatroomService.getChatroomsByRenterId(renterId);
+
+        assertEquals(2, result.size());
+        assertTrue(result.contains(chatroom1));
+        assertTrue(result.contains(chatroom2));
+    }
+
+    @Test
+    void getChatroomsByOwnerId_WithMultipleChatrooms_ShouldReturnAll() {
+        Chatroom chatroom1 = new Chatroom();
+        chatroom1.setId(UUID.randomUUID());
+        chatroom1.setOwnerId(ownerId);
+
+        Chatroom chatroom2 = new Chatroom();
+        chatroom2.setId(UUID.randomUUID());
+        chatroom2.setOwnerId(ownerId);
+
+        List<Chatroom> expectedChatrooms = Arrays.asList(chatroom1, chatroom2);
+        when(chatroomRepository.findByOwnerIdForList(ownerId)).thenReturn(expectedChatrooms);
+
+        List<Chatroom> result = chatroomService.getChatroomsByOwnerId(ownerId);
+
+        assertEquals(2, result.size());
+        assertTrue(result.contains(chatroom1));
+        assertTrue(result.contains(chatroom2));
     }
 }
